Updated everything to Minestom 1.21